# asterias

./: .gitignore  README.md  pyproject.toml  scratch.ipynb
.github/workflows/: tests.yml
src/asterias/: __init__.py  compute.py  constants.py  core.py  download.py  interpolate.py
src/asterias/grid_files/: phoenix_grid.csv
src/asterias/sensitivity_files/: JWST_MIRI_LRS_throughput.csv  JWST_NIRCam_F322W2_throughput.csv  JWST_NIRCam_F444_throughput.csv  JWST_NIRISS_SOSSo1_throughput.csv  JWST_NIRISS_SOSSo2_throughput.csv  JWST_NIRSpec_G140H-f070_throughput.csv  JWST_NIRSpec_G140H-f100_throughput.csv  JWST_NIRSpec_G140M-f070_throughput.csv  JWST_NIRSpec_G140M-f100_throughput.csv  JWST_NIRSpec_G235H_throughput.csv  JWST_NIRSpec_G235M_throughput.csv  JWST_NIRSpec_G395H_throughput.csv  JWST_NIRSpec_G395M_throughput.csv  README.txt
tests/: conftest.py  test_compute.py  test_core.py  test_grids.py  test_impute.py  test_interpolate.py  test_validation.py
