[project]
name = "asterias"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ben-Cassese", email = "b.c.cassese@columbia.edu" }

]
requires-python = ">=3.9"
dependencies = [
    "importlib>=1.0.4",
    "interpax>=0.3.7",
    "ipykernel>=6.29.5",
    "ipython>=8.18.1",
    "jax>=0.4.30",
    "numpy>=2.0.2",
    "quadax>=0.2.7",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[project.urls]
# "Homepage" = ""
"Source" = "https://github.com/ben-cassese/asterias"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
dev = [
    "black[jupyter]>=25.1.0",
    "codespell>=2.4.1",
    "matplotlib>=3.9.4",
    "myst-parser>=3.0.1",
    "nbsphinx>=0.9.7",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-xdist>=3.6.1",
    "ruff>=0.11.6",
    "sphinx>=7.4.7",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-automodapi>=0.19.0",
    "sphinx-book-theme>=1.1.4",
    "sphinxcontrib-video>=0.4.1",
    "tox>=4.25.0",
    "tox-gh-actions>=3.3.0",
    "tox-uv>=1.25.0",
]

[tool.ruff.lint]
ignore = [
    "E402", # want to enable jax64 before importing anything that might run jax code on import
]
